# pldm

./: .secrets.baseline  README.md  meson.build  meson.options  meson_options.txt  pldmd.cpp
common/: bios_utils.hpp  flight_recorder.hpp  types.hpp  utils.cpp  utils.hpp
common/test/: mocked_utils.hpp  pldm_utils_test.cpp
config/: meson.build
configurations/: meson.build
configurations/events/: stateSensorPdrs.json
configurations/host/: dbus_to_terminus_effecter.json  host_fru_associations.json
configurations/pdr/: 11.json  4.json
docs/: PLDM_FileIO_v2.docx
fw-update/: activation.hpp  device_updater.cpp  device_updater.hpp  inventory_manager.cpp  inventory_manager.hpp  manager.hpp  package_parser.cpp  package_parser.hpp  update_manager.cpp  update_manager.hpp  watch.cpp  watch.hpp
fw-update/test/: device_updater_test.cpp  inventory_manager_test.cpp  meson.build
host-bmc/: custom_dbus.cpp  custom_dbus.hpp  dbus_to_event_handler.cpp  dbus_to_event_handler.hpp  dbus_to_host_effecters.cpp  dbus_to_host_effecters.hpp  dbus_to_terminus_effecters.cpp  dbus_to_terminus_effecters.hpp  host_associations_parser.cpp  host_associations_parser.hpp  host_condition.cpp  host_condition.hpp  host_pdr_handler.cpp  host_pdr_handler.hpp  utils.cpp  utils.hpp
host-bmc/dbus/: asset.cpp  asset.hpp  associations.cpp  associations.hpp  availability.cpp  availability.hpp  board.hpp  cable.cpp  cable.hpp  chapdata.cpp  chapdata.hpp  chassis.cpp  chassis.hpp  connector.hpp  cpu_core.cpp  cpu_core.hpp  custom_dbus.cpp  custom_dbus.hpp  decorator_revision.cpp  decorator_revision.hpp  deserialize.cpp  deserialize.hpp  enable.cpp  enable.hpp  fabric_adapter.hpp  fan.hpp  global.hpp  inventory_item.cpp  inventory_item.hpp  led_group.cpp  led_group.hpp  license_entry.cpp  license_entry.hpp  linkreset.cpp  linkreset.hpp  location_code.cpp  location_code.hpp  motherboard.hpp  operational_status.cpp  operational_status.hpp  (+15 more)
host-bmc/test/: custom_dbus_test.cpp  meson.build  serialize_test.cpp  utils_test.cpp
ibm,bonnell/: 11.json  4.json
libpldm/: meson.build  pdr.c  pdr.h  pdr_data.h  state_set.h  states.h
libpldm/tests/: libpldm_pdr_test.cpp
libpldmresponder/: base.cpp  base.hpp  bios.cpp  bios.hpp  bios_attribute.cpp  bios_config.cpp  bios_config.hpp  bios_enum_attribute.cpp  bios_integer_attribute.cpp  bios_parser.cpp  bios_string_attribute.cpp  bios_table.cpp  event_parser.cpp  event_parser.hpp  fru.cpp  fru.hpp  fru_parser.cpp  meson.build  oem_handler.hpp  pdr_numeric_effecter.hpp  pdr_state_effecter.hpp  pdr_state_sensor.hpp  pdr_utils.cpp  pdr_utils.hpp  platform.cpp  platform.hpp  platform_config.cpp  platform_numeric_effecter.hpp  platform_state_effecter.hpp  platform_state_sensor.hpp
libpldmresponder/test/: base.cpp  base.hpp  bios.hpp  bios_attribute.cpp  bios_attribute.hpp  bios_enum_attribute.hpp  bios_integer_attribute.cpp  bios_integer_attribute.hpp  bios_string_attribute.cpp  bios_string_attribute.hpp  bios_table.cpp  bios_table.hpp  event_parser.cpp  event_parser.hpp  fru.cpp  fru.hpp  fru_parser.cpp  fru_parser.hpp  libpldmresponder_base_test.cpp  libpldmresponder_bios_config_test.cpp  libpldmresponder_bios_test.cpp  libpldmresponder_fru_test.cpp  libpldmresponder_pdr_effecter_test.cpp  libpldmresponder_pdr_sensor_test.cpp  libpldmresponder_platform_test.cpp  libpldmresponder_systemspecific_bios_test.cpp  meson.build  oem_handler.hpp  pdr.cpp  pdr.hpp  pdr_numeric_effecter.hpp  pdr_state_effecter.hpp  pdr_state_sensor.hpp  pdr_utils.cpp  platform.cpp  platform.hpp  platform_numeric_effecter.hpp  platform_state_sensor.hpp
libpldmresponder/test/event_jsons/good/: event_state_sensor.json
libpldmresponder/test/test/: meson.build
oem/ibm/configurations/: dbus-config.json  entityMap.json  fileTable.json
oem/ibm/host-bmc/: host_lamp_test.cpp  host_lamp_test.hpp
oem/ibm/libpldm/: entity.h  file_io.h  pdr_oem_ibm.c  pdr_oem_ibm.h  platform_oem_ibm.c  state_set.h  state_set_oem_ibm.h
oem/ibm/libpldmresponder/: .file_io_type_cert.hpp.swp  bios_oem_ibm.cpp  bios_oem_ibm.hpp  collect_slot_vpd.cpp  collect_slot_vpd.hpp  file_io.cpp  file_io.hpp  file_io_by_type.cpp  file_io_by_type.hpp  file_io_type_cert.cpp  file_io_type_cert.hpp  file_io_type_chap.cpp  file_io_type_chap.hpp  file_io_type_dump.cpp  file_io_type_dump.hpp  file_io_type_lic.cpp  file_io_type_lic.hpp  file_io_type_lid.hpp  file_io_type_pcie.cpp  file_io_type_pcie.hpp  file_io_type_pel.cpp  file_io_type_pel.hpp  file_io_type_progress_src.cpp  file_io_type_progress_src.hpp  file_io_type_smsmenu.cpp  file_io_type_smsmenu.hpp  file_io_type_vpd.cpp  file_io_type_vpd.hpp  file_table.cpp  file_table.hpp  fru_oem_ibm.cpp  fru_oem_ibm.hpp  inband_code_update.cpp  inband_code_update.hpp  oem_ibm_handler.cpp  oem_ibm_handler.hpp  platform_oem_ibm.cpp  platform_oem_ibm.hpp  (+2 more)
oem/ibm/pfw-sms-utils/: meson.build  pfw_sms_menu.cpp  pfw_sms_menu.hpp  try_pfw_sms_ibm.c  try_pfw_sms_ibm.cpp
oem/ibm/pfw-sms-utils/pam-config/: ibm-pfw-sms-menu  meson.build
platform-mc/: dbus_to_terminus_effecters.cpp  dbus_to_terminus_effecters.hpp  terminus_manager.cpp  terminus_manager.hpp
pldmd/: PldmRespInterface.hpp  dbus_impl_pdr.cpp  dbus_impl_pdr.hpp  dbus_impl_requester.cpp  dbus_impl_requester.hpp  handler.hpp  instance_id.cpp  instance_id.hpp  invoker.hpp  oem_ibm.hpp  pldm_resp_interface.hpp  pldmd.cpp
pldmtool/: pldm_base_cmd.cpp  pldm_base_cmd.hpp  pldm_bios_cmd.cpp  pldm_bios_cmd.hpp  pldm_cmd_helper.cpp  pldm_cmd_helper.hpp  pldm_fru_cmd.cpp  pldm_fru_cmd.hpp  pldm_fw_update_cmd.cpp  pldm_fw_update_cmd.hpp  pldm_platform_cmd.cpp  pldm_platform_cmd.hpp  pldmtool.cpp
requester/: handler.hpp  mctp_endpoint_discovery.cpp  mctp_endpoint_discovery.hpp  request.hpp
requester/test/: handler_test.cpp  meson.build  mock_request.hpp  request_test.cpp
softoff/: main.cpp  meson.build  softoff.cpp  softoff.hpp
softoff/services/: pldmSoftPowerOff.service
test/: meson.build  pldmd_registration_test.cpp
tools/visualize-pdr/: pldm_visualise_pdrs.py
utilities/requester/: set_state_effecter.cpp  set_state_effecter_async.cpp
(+50 files in other folders)
